# ccal

./: CMakeLists.txt
data/: calendar.xml
includes/ccal/: calendar.h  database.h  datastructure.h  datetime.h  list.h  menu.h  search.h  sort.h
includes/tools/: tools.h
src/: main.c
src/ccal/: calendar.c  database.c  datetime.c  list.c  menu.c  search.c  sort.c
src/tools/: tools.c
tmp/ccal-0.4-20231207/: CMakeLists.txt
tmp/ccal-0.4-20231207/includes/ccal/: calendar.h  datastructure.h
tmp/ccal-0.4-20231207/includes/tools/: escapesequenzen.h
tmp/ccal-0.4-20231207/src/ccal/: calendar.c  datetime.c
tmp/ccal-0.4-20231207/src/tools/: tools.c
